// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Download component matches the snapshot 1`] = `
<div
  className="iqMgVR"
>
  <h3
    className="lmLbkz"
  >
    Yoast SEO
  </h3>
  <p
    className="hTVMCQ"
  >
     
    version 4.7
  </p>
  <img
    alt=""
    className="bAfIbR"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="boOFOz"
  >
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Wordpress"
        className="bbyVCr"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Drupal"
        className="bbyVCr"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;

exports[`The Download component without a currentVersion matches the snapshot 1`] = `
<div
  className="iqMgVR"
>
  <h3
    className="lmLbkz"
  >
    Yoast SEO
  </h3>
  
  <img
    alt=""
    className="bAfIbR"
    src="Yoast_SEO_Icon_Small.svg"
  />
  <ul
    className="boOFOz"
  >
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Wordpress"
        className="bbyVCr"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Wordpress
      </p>
    </li>
    <li
      className="jVUpbY"
    >
      <button
        aria-label="Download Yoast SEO for Drupal"
        className="bbyVCr"
        onClick={[Function]}
      >
        Download
      </button>
      <p
        aria-hidden="true"
        className="cBxjGK"
      >
        for Drupal
      </p>
    </li>
  </ul>
</div>
`;
